adding and fixing nav errors, also removing packag=lock file

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,4 +1,10 @@
 {
+  "navbar": {
+    "home": "Home",
+    "report": "Report",
+    "advancedSearch": "Advanced Search",
+    "logout": "Logout"
+  },
   "home": {
     "title": "Participant Management",
     "subtitle": "Search and manage registered participants' information.",
