making some improvements

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -131,7 +131,12 @@
       "status_section": "Participation Status",
       "arrival_registered": "Check-in / Arrival",
       "variety_show_label": "Variety Show",
+      "variety_show_confirmed": "Participación confirmada",
+      "variety_show_pending": "Sin confirmar participación",
       "musical_program_label": "Musical Program",
+      "any_musical": "Todos (musical)",
+      "musical_confirmed": "Participación confirmada",
+      "musical_pending": "Sin confirmar participación",
       "phone_submitted_label": "Phone Submitted",
       "any_status": "All",
       "legend": "Status Legend:",
