--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -100,7 +100,9 @@
       "of": "de",
       "results": "resultados",
       "previous_short": "Antes",
-      "next_short": "Siguiente"
+      "next_short": "Siguiente",
+      "previous": "Anterior",
+      "next": "Siguiente"
     },
     "title": "Búsqueda Avanzada",
     "subtitle": "Filtra participantes por compañía, estaca y barrio",
@@ -167,7 +169,9 @@
       "group_company": "Grupo/Compañía",
       "view": "Ver",
       "actions": "Acciones",
-      "bed": "Cama"
+      "bed": "Cama",
+      "check_in": "Check-in",
+      "variety_show": "Show de variedades"
     }
   },
   "bed_update": {
